WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283304
[iOS] [Mail Compose] Unable to tap to put text cursor at end of line if last word was autocorrected
https://bugs.webkit.org/show_bug.cgi?id=283304
Summary
[iOS] [Mail Compose] Unable to tap to put text cursor at end of line if last ...
Wenson Hsieh
Reported
2024-11-18 10:09:00 PST
rdar://129961069
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-11-18 11:08:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36807
EWS
Comment 2
2024-11-18 14:14:50 PST
Committed
286757@main
(abdb8d25bff5): <
https://commits.webkit.org/286757@main
> Reviewed commits have been landed. Closing PR #36807 and removing active labels.
EWS
Comment 3
2024-12-17 14:11:03 PST
Committed
283286.603@safari-7620-branch
(2747c8edf86b): <
https://commits.webkit.org/283286.603@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2412 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug