Source/WebKit/WebProcess/WebPage/WebPage.cpp
@@ -7168,6 +7168,8 @@ void WebPage::didChangeSelection(LocalFrame& frame)
 #endif
 
 #if PLATFORM(IOS_FAMILY)
+    resetLastSelectedReplacementRangeIfNeeded();
+
     if (!std::exchange(m_sendAutocorrectionContextAfterFocusingElement, false))
         return;
 
@@ -7697,6 +7699,7 @@ void WebPage::didCommitLoad(WebFrame* frame)
     m_estimatedLatency = Seconds(1.0 / 60);
     m_shouldRevealCurrentSelectionAfterInsertion = true;
     m_lastLayerTreeTransactionIdAndPageScaleBeforeScalingPage = std::nullopt;
+    m_lastSelectedReplacementRange = { };
 
     invokePendingSyntheticClickCallback(SyntheticClickResult::PageInvalid);
 
