Tools/WebKitTestRunner/ios/UIScriptControllerIOS.h
@@ -111,7 +111,8 @@ private:
     void keyboardAccessoryBarPrevious() override;
     bool isShowingKeyboard() const override;
     bool hasInputSession() const override;
-    void applyAutocorrection(JSStringRef newString, JSStringRef oldString, JSValueRef) override;
+    void selectWordForReplacement() override;
+    void applyAutocorrection(JSStringRef newString, JSStringRef oldString, JSValueRef, bool) override;
     double minimumZoomScale() const override;
     double maximumZoomScale() const override;
     std::optional<bool> stableStateOverride() const override;
