Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm
@@ -837,7 +837,20 @@ bool UIScriptControllerIOS::hasInputSession() const
     return webView().isInteractingWithFormControl;
 }
 
-void UIScriptControllerIOS::applyAutocorrection(JSStringRef newString, JSStringRef oldString, JSValueRef callback)
+void UIScriptControllerIOS::selectWordForReplacement()
+{
+#if USE(BROWSERENGINEKIT)
+    if (auto asyncInput = asyncTextInput()) {
+        [asyncInput selectWordForReplacement];
+        return;
+    }
+#endif // USE(BROWSERENGINEKIT)
+
+    auto contentView = static_cast<id<UIWKInteractionViewProtocol>>(platformContentView());
+    [contentView selectWordForReplacement];
+}
+
+void UIScriptControllerIOS::applyAutocorrection(JSStringRef newString, JSStringRef oldString, JSValueRef callback, bool underline)
 {
     unsigned callbackID = m_context->prepareForAsyncTask(callback, CallbackTypeNonPersistent);
 
@@ -849,13 +862,14 @@ void UIScriptControllerIOS::applyAutocorrection(JSStringRef newString, JSStringR
                     m_context->asyncTaskComplete(callbackID);
             }).get());
         });
-        [asyncInput replaceText:toWTFString(oldString) withText:toWTFString(newString) options:0 completionHandler:completionWrapper.get()];
+        auto options = underline ? BETextReplacementOptionsAddUnderline : BETextReplacementOptionsNone;
+        [asyncInput replaceText:toWTFString(oldString) withText:toWTFString(newString) options:options completionHandler:completionWrapper.get()];
         return;
     }
 #endif // USE(BROWSERENGINEKIT)
 
     auto contentView = static_cast<id<UIWKInteractionViewProtocol>>(platformContentView());
-    [contentView applyAutocorrection:toWTFString(newString) toString:toWTFString(oldString) shouldUnderline:NO withCompletionHandler:makeBlockPtr([this, protectedThis = Ref { *this }, callbackID](UIWKAutocorrectionRects *) {
+    [contentView applyAutocorrection:toWTFString(newString) toString:toWTFString(oldString) shouldUnderline:underline withCompletionHandler:makeBlockPtr([this, protectedThis = Ref { *this }, callbackID](UIWKAutocorrectionRects *) {
         dispatch_async(dispatch_get_main_queue(), makeBlockPtr([this, protectedThis = Ref { *this }, callbackID] {
             // applyAutocorrection can call its completion handler synchronously,
             // which makes UIScriptController unhappy (see bug 172884).
